Edit more on the HTML Files

--- a/about.html
+++ b/about.html
@@ -13,5 +13,6 @@
         <a href="/Personal Website/about.html">About</a>
         <a href="/Personal Website/portfolio.html">Contact Us</a>
     </nav>
+    <footer>&copy Made in California</footer>
 </body>
 </html>
