--- a/portfolio.html
+++ b/portfolio.html
@@ -13,5 +13,6 @@
         <a href="/Personal Website/about.html">About</a>
         <a href="/Personal Website/portfolio.html">Contact Us</a>
     </nav>
+    <footer>&copy Made in California</footer>
 </body>
 </html>
