--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav>
-        <a href="/Personal Website/index.html">Home</a>
-        <a href="/Personal Website/about.html">About</a>
-        <a href="/Personal Website/portfolio.html">Contact Us</a>
+        <a href="/Personal Website/Personal-Website/index.html">Home</a>
+        <a href="/Personal Website/Personal-Website/about.html">About</a>
+        <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
     </nav>
     <footer>&copy Made in California</footer>
 </body>
