Included the header for each html page file.

--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
         <a href="/Personal Website/Personal-Website/about.html">About</a>
         <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
     </nav>
+    <header><h1>About Me</h1></header>
     <p>
-        
+        Hi and welcome to my personal website. My name is Roy Perlman is what you will learn about me.<br>
     </p>
     <footer>&copy Made in California</footer>
 </body>
