--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="/Personal Website/Personal-Website/about.html">About</a>
         <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
     </nav>
+    <header><h1>Home</h1></header>
     <footer>&copy Made in California</footer>
 </body>
 </html>
