--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <a href="/Personal Website/Personal-Website/about.html">About</a>
         <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
     </nav>
-    <header><h1>About Me</h1></header>
+    <header><h1>Roy Perlman</h1></header>
     <p>
         Hi and welcome to my personal website. My name is Roy Perlman is what you will learn about me.<br>
     </p>
