--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="/Personal Website/Personal-Website/about.html">About</a>
         <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
     </nav>
-    <header><h1>Home</h1></header>
+    <header><h1>Roy Perlman</h1></header>
     <p>I am exited to show you what I can do.</p>
     <footer>&copy Made in California</footer>
 </body>
