Some more CSS edit for the navidation bar, and made some grammar fixes.

--- a/about.html
+++ b/about.html
@@ -8,12 +8,14 @@
     <script src="javascript.js"></script>
 </head>
 <body>
+    <div>
     <nav>
         <a href="/Personal Website/Personal-Website/index.html">Home</a>
         <a href="/Personal Website/Personal-Website/about.html">About</a>
-        <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
+        <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
     </nav>
     <header><h1>Roy Perlman</h1></header>
+    </div>
     <p>
         Hi and welcome to my personal website. My name is Roy Perlman is what you will learn about me.<br>
     </p>
