--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="/Personal Website/Personal-Website/index.html">Home</a>
-        <a href="/Personal Website/Personal-Website/about.html">About</a>
-        <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
-    </nav>
-    <header><h1>Roy Perlman</h1></header>
+    <div>
+        <nav>
+            <a href="/Personal Website/Personal-Website/index.html">Home</a>
+            <a href="/Personal Website/Personal-Website/about.html">About</a>
+            <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+        </nav>
+        <header><h1>Roy Perlman</h1></header>
+    </div>
     <p>I am exited to show you what I can do.</p>
     <footer>&copy Made in California</footer>
 </body>
