CSS coding editing.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         </nav>
         <header><h1>Roy Perlman</h1></header>
     </div>
-    <p>I am exited to show you what I can do.</p>
+    <article class = "paragraph">
+        <h3>Software Engineer, Vocolist, Follower of Christ</h3>
+        <p>I am exited to show you what I can do.</p>
+    </article>
     <footer>&copy Made in California</footer>
 </body>
 </html>
