--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="/Personal Website/Personal-Website/index.html">Home</a>
             <a href="/Personal Website/Personal-Website/about.html">About</a>
-            <a href="/Personal Website/Personal-Website/portfolio.html">Contact Us</a>
+            <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
         </nav>
         <header><h1>Roy Perlman</h1></header>
     </div>
