--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         </nav>
         <header><h1>Roy Perlman</h1></header>
     </div>
+    <section>
     <article class = "paragraph">
         <h3>Software Engineer, Vocolist, Follower of Christ</h3>
-        <p>I am exited to show you what I can do.</p>
+        <section>
+            <p>I am very passionat for the things that I can do.</p>
+            <h3 class = "bibleVerse"> There is salvation in no one else, for there is no other name under heaven given among men by which we must be saved.<br> 
+                -Acts 4:12
+            </h3>
     </article>
-    <footer>&copy Made in California</footer>
+</section>
 </body>
 </html>
