Lots more HTML editing  and with CSS.

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,5 +16,10 @@
         </nav>
         <header><h1>Roy Perlman</h1></header>
     </div>
+    <section class = "paragraph">
+        <article>
+            
+        </article>
+    </section>
 </body>
 </html>
