Added some phots, along with CSS correcting.

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     <section class = "paragraph">
         <article>
             <h2>Legos</h2>
-            <img class = "imageRight" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLAnUo6y8y1hIFQfOgImmYn72woP1-aRrnwA&s" alt = "Lego Logo" >
-            <p>
+             <img class = "imageLeft" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLAnUo6y8y1hIFQfOgImmYn72woP1-aRrnwA&s" alt = "Lego Logo" >
+            <p> 
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
             <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
                 
@@ -30,6 +30,7 @@
         </article>
         <article>
             <h2>Music Listening</h2>
+            <img class = "imageRight" src ="https://img.freepik.com/premium-photo/girl-listening-music-with-her-headphones_1041953-270.jpg" alt = "Music Listening" >
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
             <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
