--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div>
+    <div class = "divideBox">
     <nav>
         <a href="/Personal Website/Personal-Website/index.html">Home</a>
         <a href="/Personal Website/Personal-Website/about.html">About</a>
@@ -41,6 +41,7 @@
         </article>
         <article>
             <h2>Entertainment</h2>
+            <img class = "imageLeft" src ="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781608873968/marvel-comics-9781608873968_lg.jpg" alt = "Spider-Man Swinging." >
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
             <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
