--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <div>
+    <div class = "divideBox">
         <nav>
             <a href="/Personal Website/Personal-Website/index.html">Home</a>
             <a href="/Personal Website/Personal-Website/about.html">About</a>
