--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,11 @@
         <header><h1>Roy Perlman</h1></header>
     </div>
     <section class = "paragraph">
-        <h2 class = "header2">Project That I had Made</h2>
+        <h2 class = "header2">Project That I Created</h2>
         <div class = "divideSquare">
             <articel>
-                <h3 class = "header2">First Project</h3>
+                <h3 class = "header2">First Project:<i>2D Action Pack Game</i></h3>
+                <img class ="imageLeft" src="https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://fdczvxmwwjwpwbeeqcth.supabase.co/storage/v1/object/public/images/bd1ad94c-3fbf-437e-b8a3-f98624843ad5/68e21388-c1cc-4119-afb0-f6c78a63e7c2.png" alt="Shooter Game Sprite">
                 <p> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
                 <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
@@ -32,7 +33,8 @@
         </div>
         <div class = "divideSquare">
             <articel>
-                <h3 class = "header2">Second Project</h3>
+                <h3 class = "header2">Second Projec: <i>Expense Tracker</i></h3>
+                <img class ="imageRight" src="https://i.pinimg.com/736x/c0/78/57/c078574f636c135d730bdf9699ce4245.jpg" alt = "Expense Tracker">
                 <p> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
                 <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
@@ -44,7 +46,8 @@
         </div>
         <div class = "divideSquare">
             <articel>
-                <h3 class = "header2">Third Project</h3>
+                <h3 class = "header2">Third Project: <i>Recipe Website</i></h3>
+                <img class ="imageLeft" src ="https://img.gadgethacks.com/img/97/23/63665125625191/0/catalog-save-recipes-from-any-site-your-smartphone.w1456.jpg" alt = "recipe picture">
                 <p> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
                 <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
