Some CSS/HTML Edits and Some more JavaScript playing around

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <header><h1>Roy Perlman</h1></header>
     </div>
     <section>
+    <div>
     <article class = "paragraph">
         <h3>Software Engineer, Vocolist, Follower of Christ</h3>
         <section>
@@ -33,6 +34,8 @@
                 -Acts 4:12
             </h3>
     </article>
+</div>
 </section>
+<footer>&copy Made in California</footer>
 </body>
 </html>
