--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <h2 class = "header2">Project That I Created</h2>
         <div class = "divideSquare">
             <articel>
-                <h3 class = "header2">First Project:<i>2D Action Pack Game</i></h3>
+                <h3 class = "header2">First Project: <i>2D Action Pack Game</i></h3>
                 <img class ="imageLeft" src="https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://fdczvxmwwjwpwbeeqcth.supabase.co/storage/v1/object/public/images/bd1ad94c-3fbf-437e-b8a3-f98624843ad5/68e21388-c1cc-4119-afb0-f6c78a63e7c2.png" alt="Shooter Game Sprite">
                 <p> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
@@ -58,5 +58,6 @@
             </articel>
         </div>
     </section>
+    <footer>&copy Made in California</footer>
 </body>
 </html>
