Made a small fix for the protfolio.html file.

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         </div>
         <div class = "divideSquare">
             <articel>
-                <h3 class = "header2">Second Projec: <i>Expense Tracker</i></h3>
+                <h3 class = "header2">Second Project: <i>Expense Tracker</i></h3>
                 <img class ="imageRight" src="https://i.pinimg.com/736x/c0/78/57/c078574f636c135d730bdf9699ce4245.jpg" alt = "Expense Tracker">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
                 <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
