Small changes for the about.html file.

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div>
         <article class = "header2">
             <h2>Legos</h2>
-             <img class = "imageLeft" src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLAnUo6y8y1hIFQfOgImmYn72woP1-aRrnwA&s" alt = "Lego Logo" >
+             <img class = "imageLeft" src ="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/lego-brick-pile-frank-designs.jpg" alt = "Pile of Legos" >
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
             <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p> 
             <p>Illo explicabo nesciunt, ratione, labore quaerat, quis amet reiciendis commodi dignissimos sapiente illum minima voluptates porro officiis nostrum dolorem! Cum quae quam ipsam expedita cupiditate voluptates placeat. Modi, tempore et.</p> 
