Updated the navaigation bar

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
             <a href="/Personal Website/Personal-Website/index.html">Home</a>
             <a href="/Personal Website/Personal-Website/about.html">About</a>
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+            <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
         <header><h1>Roy Perlman</h1></header>
     </div>
