Updated the contact.html file.

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,12 @@
     </nav>
     <header><h1>Roy Perlman</h1></header>
     </div>
-    
+    <section>
+        <div>
+            <article class = "paragraph">
+                
+            </article>
+        </div>
+    </section>
 </body>
 </html>
