Created and made the form for the contact page/tab.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,23 @@
     <section>
         <div>
             <article class = "paragraph">
-                
+                <h1 class = "header1">Contact Me:</h1>
+                <form id="form" class = "formBox" action="./success.html">
+                    <div class="textSize">
+                        <label for="fname">First Name:</label><br/>
+                            <input type="text" name="fname" id="fname" /><br/><br/>
+                        <label for="fname">Last Name:</label><br/>
+                            <input type="text" name="lname" id="lname" /><br/><br/>
+                        <label for="cellNumber">Phone Number:</label><br/>
+                            <input type="number" id="cellNumber" name="cellNumber"/><br/><br/>
+                        <label for="email">Email:</label><br/>
+                            <input type="email" id="email" name="email" /><br/><br/>
+                        <label for="review"></label>
+                            <textarea name="emailMessage" id="emailMessage" cols="45" rows="10">
+                            </textarea><br/>
+                    </div>
+                    <input type="submit" value="Submit" />
+                </form>
             </article>
         </div>
     </section>
