--- a/success.html
+++ b/success.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal Website</title>
+        <title>Roy's Portfolio Site</title>
         <script src="javascript.js"></script>
+        <script src="success.js"></script>
     </head>
     <body>
     <div class = "divideBox">
