--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                             <textarea name="emailMessage" id="emailMessage" cols="45" rows="10">
                             </textarea><br/>
                     </div>
-                    <input type="submit" value="Submit" />
+                    <input type="submit" value="Submit" id="submit"/>
                 </form>
             </article>
         </div>
