--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roy's Portfolio Site</title>
     <script src="javascript.js"></script>
-    <script src="success.js"></script>
 </head>
 <body>
 <div class = "divideBox">
@@ -22,7 +21,7 @@
         <div>
             <article class = "paragraph">
                 <h1 class = "header1">Contact Me:</h1>
-                <form id="form" class = "formBox" action="./success.html">
+                <form id="form" type="form" class = "formBox" action="./success.html">
                     <div class="textSize">
                         <label for="fname">First Name:</label><br/>
                             <input type="text" name="fname" id="fname" /><br/><br/>
