CSS and HTML Edits

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
         <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
     </nav>
-    <header><h1>Roy Perlman</h1></header>
+    <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
     </div>
     <section class = "paragraph">
         <h1 class = "header1">Here are some activities that I enjoy doing in my spare time.</h1>
@@ -51,15 +51,4 @@
     </div>
     <div>
         <article>
-            <h2>Gym</h2>
-            <img class = "imageRight" src ="https://m.media-amazon.com/images/I/61IyGJk9cRL._AC_UF1000,1000_QL80_.jpg" alt = "barbell" >
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, iusto explicabo! Consequatur rerum vitae aperiam est quasi? A, porro, ullam illo vitae nulla dolorum quis sapiente magnam facere accusantium ipsum.</p>
-            <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p> 
-            <p>Illo explicabo nesciunt, ratione, labore quaerat, quis amet reiciendis commodi dignissimos sapiente illum minima voluptates porro officiis nostrum dolorem! Cum quae quam ipsam expedita cupiditate voluptates placeat. Modi, tempore et.</p>
-            <p>Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi dignissimos unde nam beatae consequuntur praesentium quas voluptas, doloremque nemo reiciendis consequatur sed ut officia soluta repellendus! Corporis, ex quo! </p>
-        </article>
-    </div>
-    </section>
-    <footer> &copy Made in California</footer>
-</body>
-</html>
+            <h2
