--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
             <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
-        <header><h1>Roy Perlman</h1></header>
+        <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
         </div>
 <body>
     <section>
