--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
             <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
-        <header><h1>Roy Perlman</h1></header>
+        <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
     </div>
     <section class = "paragraph">
         <h2 class = "header2">Project That I Created</h2>
@@ -57,10 +57,4 @@
                 <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
                 <p>Illo explicabo nesciunt, ratione, labore quaerat, quis amet reiciendis commodi dignissimos sapiente illum minima voluptates porro officiis nostrum dolorem! Cum quae quam ipsam expedita cupiditate voluptates placeat. Modi, tempore et.</p>
                 <p>Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi dignissimos unde nam beatae consequuntur praesentium quas voluptas, doloremque nemo reiciendis consequatur sed ut officia soluta repellendus! Corporis, ex quo! </p>
-            </articel>
-        </div>
-    </section>
-    <footer>&copy Made in California</footer>
-</body>
-</html>
- 
+    
