Lots of CSS and HTML updates on size and fonts.

--- a/success.html
+++ b/success.html
@@ -27,6 +27,4 @@
             <form align="center" action="./index.html"><button>Continue</button></form> 
         </article>
     </section>
-    <footer>&copy Made in California</footer>
-</body>
-</html>
+    <footer>&copy Made in Californi
