More updates with another html file called skills.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="/Personal Website/Personal-Website/index.html">Home</a>
             <a href="/Personal Website/Personal-Website/about.html">About</a>
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+            <a href="/Personal Website/Personal-Website/skills.html">Skills</a>
             <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
         <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
@@ -29,4 +30,11 @@
             <p>Illo explicabo nesciunt, ratione, labore quaerat, quis amet reiciendis commodi dignissimos sapiente illum minima voluptates porro officiis nostrum dolorem! Cum quae quam ipsam expedita cupiditate voluptates placeat. Modi, tempore et.</p> 
             <p>Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi dignissimos unde nam beatae consequuntur praesentium quas voluptas, doloremque nemo reiciendis consequatur sed ut officia soluta repellendus! Corporis, ex quo! </p>
             <h3 class = "bibleVerse"> There is salvation in no one else, for there is no other name under heaven given among men by which we must be saved.<br> 
-              
+                -Acts 4:12
+            </h3>
+    </article>
+</section>
+</div>
+<footer>&copy Made in California</footer>
+</body>
+</html>
