--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,15 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-<div class = "divideBox">
-    <nav>
-        <a href="/Personal Website/Personal-Website/index.html">Home</a>
-        <a href="/Personal Website/Personal-Website/about.html">About</a>
-        <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
-        <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
-    </nav>
-    <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
+    <div class = "divideBox">
+        <nav>
+            <a href="/Personal Website/Personal-Website/index.html">Home</a>
+            <a href="/Personal Website/Personal-Website/about.html">About</a>
+            <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+            <a href="/Personal Website/Personal-Website/skills.html">Skills</a>
+            <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
+        </nav>
+        <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
     </div>
     <section>
         <div>
