--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,10 @@
             <a href="/Personal Website/Personal-Website/index.html">Home</a>
             <a href="/Personal Website/Personal-Website/about.html">About</a>
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+            <a href="/Personal Website/Personal-Website/skills.html">Skills</a>
             <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
-        <header><h1 class="headerTitleName">Roy Perlman</h1></header>
+        <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
     </div>
     <section class = "paragraph">
         <h2 class = "header2">Project That I Created</h2>
