--- a/success.html
+++ b/success.html
@@ -9,16 +9,16 @@
         <script src="success.js"></script>
     </head>
     <body>
-    <div class = "divideBox">
-        <nav>
-            <a href="/Personal Website/Personal-Website/index.html">Home</a>
-            <a href="/Personal Website/Personal-Website/about.html">About</a>
-            <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
-            <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
-        </nav>
-        <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
+        <div class = "divideBox">
+            <nav>
+                <a href="/Personal Website/Personal-Website/index.html">Home</a>
+                <a href="/Personal Website/Personal-Website/about.html">About</a>
+                <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
+                <a href="/Personal Website/Personal-Website/skills.html">Skills</a>
+                <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
+            </nav>
+            <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
         </div>
-<body>
     <section>
         <article  class = "paragraph">
             <h1 class = "header1">Contact Me:</h1>
@@ -27,4 +27,6 @@
             <form align="center" action="./index.html"><button>Continue</button></form> 
         </article>
     </section>
-    <footer>&copy Made in Californi
+    <footer>&copy Made in California</footer>
+</body>
+</html>
