The interface resolution has been adjusted to be compatible with smartphone screens.

--- a/success.html
+++ b/success.html
@@ -24,9 +24,4 @@
             <h1 class = "header1">Contact Me:</h1>
             <h1 align="center">Thank you for your submission.</h1>
             <p align="center"><i>I look forward to connecting with you.</i></p>
-            <form align="center" action="./index.html"><button>Continue</button></form> 
-        </article>
-    </section>
-    <footer>&copy Made in California</footer>
-</body>
-</html>
+            <form align="center" action="./index.
