--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
             <a href="/Personal Website/Personal-Website/about.html">About</a>
             <a href="/Personal Website/Personal-Website/portfolio.html">Portfolio</a>
             <a href="/Personal Website/Personal-Website/skills.html">Skills</a>
+            <a href="/Personal Website/Personal-Website/background.html">Background</a>
             <a href="/Personal Website/Personal-Website/contact.html">Contact</a>
         </nav>
         <header><h1 class = "headerTitleName">Roy Perlman</h1></header>
