Lots of more updates with CSS sizing and background page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,4 +79,9 @@
                     <img class ="imageSize" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSbFH43DqzYHTP6UpbakzJyf3yntd-WS9hqQ&s" alt="Hotel Graphics">
                 </div>
             </div>
-     
+        </div>
+    </section>
+    <footer>&copy Made in California</footer>
+</body>
+</html>
+ 
