--- a/skills.html
+++ b/skills.html
@@ -36,4 +36,8 @@
                     <li>XCode</li>
                 </ul>
             </div>
-       
+        </article>
+    </section>
+    <footer>&copy Made in California</footer>
+</body>
+</html>
