Updating the grid for most of the pages.

--- a/background.html
+++ b/background.html
@@ -23,15 +23,19 @@
         <article>
             <h1 class = "header1">Background</h1>
             <div class = "divideSquare">
-                <div>
                     <h3 class = "header2" style="font-size: 27px">Education</h3>
-                    <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State University">
-                    <p class = "pSizing"> Bachelor of Science<br>
-                        Software Engineering<br>
-                       <font color="crimson">San Jose State Univerity</font><br>
-                      <img class="icon" src ="https://static-00.iconduck.com/assets.00/calendar-small-icon-1863x2048-ves2yjyu.png" alt="Calander Icon">Augest 2019 - May 2024<br>
-                      <img class="icon" src="https://cdn-icons-png.flaticon.com/256/0/619.png" alt="Location Icon">San Jose, CA<br>
-                    </p>
+                    <div class ="gridEducation"> 
+                    <article>
+                        <p class = "pSizing"> Bachelor of Science<br>
+                            Software Engineering<br>
+                            <font color="crimson">San Jose State Univerity</font><br>
+                            <img class="icon" src ="https://static-00.iconduck.com/assets.00/calendar-small-icon-1863x2048-ves2yjyu.png" alt="Calander Icon">Augest 2019 - May 2024<br>
+                            <img class="icon" src="https://cdn-icons-png.flaticon.com/256/0/619.png" alt="Location Icon">San Jose, CA<br>
+                        </p>
+                    </article>
+                    <article>
+                        <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State University">
+                    </article>
                 </div>
             </div>
         </article>
