--- a/background.html
+++ b/background.html
@@ -34,12 +34,4 @@
                         </p>
                     </article>
                     <article>
-                        <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State University">
-                    </article>
-                </div>
-            </div>
-        </article>
-    </section>
-    <footer>&copy Made in California</footer>
-</body>
-</html>
+                        <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State Univ
