Updated more grids sizes.

--- a/background.html
+++ b/background.html
@@ -34,4 +34,12 @@
                         </p>
                     </article>
                     <article>
-                        <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State Univ
+                        <img class = "sjsuImage" src="https://prod-app.datausa.io/api/profile/university/san-jose-state-university/splash" alt="San Jose State University">
+                    </article>
+                </div>
+            </div>
+        </article>
+    </section>
+    <footer>&copy Made in California</footer>
+</body>
+</html>
