--- a/portfolio.html
+++ b/portfolio.html
@@ -78,4 +78,12 @@
                     <img class ="imageSize" src="https://www.accuchef.com/shoplist.gif" alt="A software for a recipe."> 
                 </div>
                 <div class="pictureFrame">
+                    <img class ="imageSize" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSbFH43DqzYHTP6UpbakzJyf3yntd-WS9hqQ&s" alt="Hotel Graphics">
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>&copy Made in California</footer>
+</body>
+</html>
  
