Major bug fixes and updates

--- a/skills.html
+++ b/skills.html
@@ -30,6 +30,7 @@
                             <li>Java</li>
                             <li>C#</li>
                             <li>Python</li>
+                            <li>php</li>
                             <li>Excel</li>
                             <li>Unity</li>
                             <li>Visual Studios</li>
@@ -37,5 +38,4 @@
                             <li>XCode</li>
                         </ul>
                     </article>
-                    <article>
-                       
+            
