--- a/index.html
+++ b/index.html
@@ -30,4 +30,17 @@
                         <p>Quos expedita eos officiis quae reiciendis quasi maxime a id fugit obcaecati accusamus doloremque, esse aut rem at nostrum fuga qui repellendus vel nesciunt culpa cupiditate! Est quibusdam magnam quasi.</p>
                         <p>Illo explicabo nesciunt, ratione, labore quaerat, quis amet reiciendis commodi dignissimos sapiente illum minima voluptates porro officiis nostrum dolorem! Cum quae quam ipsam expedita cupiditate voluptates placeat. Modi, tempore et.</p> 
                         <p>Eveniet illum illo explicabo ea amet expedita fugiat omnis excepturi dignissimos unde nam beatae consequuntur praesentium quas voluptas, doloremque nemo reiciendis consequatur sed ut officia soluta repellendus! Corporis, ex quo! </p>
-                        <h3 class = "bibleVerse"> There is salvation in no one else, for there is no other name under heaven given among men by which we must be save
+                        <h3 class = "bibleVerse"> There is salvation in no one else, for there is no other name under heaven given among men by which we must be saved.<br> 
+                            -Acts 4:12
+                        </h3>
+                    </div>
+                    <div>
+                        <img class = "profileImage" src = "https://media.licdn.com/dms/image/v2/C5603AQHRODrH3zY5TA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1577350282004?e=2147483647&v=beta&t=paovK8x1X0W9kBkheF_fSPtfQdtKb3kGN9r5M8UX4iw" alt = "Picture of Roy Perlman">
+                    </div>
+                </section>
+            </article>
+        </div>  
+    </section>
+<footer>&copy Made in California</footer>
+</body>
+</html>
